# gdsc-here

./: .gitignore  README.md
here-android/: build.gradle  settings.gradle
here-android/Wear-Data/: build.gradle
here-android/Wear-Data/src/androidTest/java/com/example/wear_data/: ExampleInstrumentedTest.kt
here-android/Wear-Data/src/test/java/com/example/wear_data/: ExampleUnitTest.kt
here-android/app/: build.gradle  google-services.json
here-android/app/src/androidTest/java/com/example/here/: ExampleInstrumentedTest.kt
here-android/app/src/main/: AndroidManifest.xml
here-android/app/src/main/java/com/example/here/: HomeActivity.kt  InitialActivity.kt  MainActivity.kt  PermissonManager.kt  RecodingService.kt
here-android/app/src/main/java/com/example/here/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
here-android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
here-android/app/src/test/java/com/example/here/: ExampleUnitTest.kt
here-android/gradle/wrapper/: gradle-wrapper.properties
here-android/here-wear/: build.gradle
here-android/here-wear/src/main/java/com/example/here/presentation/: ClientDataViewModel.kt  MainActivity.kt
here-android/here-wear/src/main/res/values/: strings.xml
here-be/: .gitignore  Dockerfile  pyproject.toml
here-be/src/: google_speech.py  main.py  utils.py  websocket_test.py
here-tflite/: Dockerfile  pyproject.toml
here-tflite/converted_tflite/: labels.txt
here-tflite/src/: google_speech.py  main.py
(+3 files in other folders)
