[tool.poetry]
name = "here-be"
version = "0.1.0"
description = ""
authors = ["jaehong21 <jaehong21@gm.gist.ac.kr>"]
# readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
google = "^3.0.0"
google-cloud-speech = "^2.18.0"
fastapi = "^0.95.0"
aiofiles = "^23.1.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"
moviepy = "^1.0.3"
websockets = "^10.4"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
